--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,14 @@
 WIP:
--Allies & Enemies
--Other classes
+-Movement Manager
+
+V 0.0.4
+changelog:
+-Added the archer class
+-AI is now able to recognize enemy from ally
+-Added AI to monsters
+-Steering behavior is still not functional
+This is the last update for the current version. I will start from scratch to try a few things, and make the code clearer
+
 
 V 0.0.3
 changelog:
